Loading different qml files from C++

--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,26 @@
-# C++ objects and libs
+# MAC OSX
+*.DS_Store
 
+# Compiled Object files
 *.slo
 *.lo
 *.o
-*.a
-*.la
-*.lai
+ 
+# Compiled Dynamic libraries
 *.so
-*.dll
-*.dylib
+ 
+# Compiled Static libraries
+*.lai
+*.la
+*.a
 
-# Qt-es
-
-*.pro.user
-*.pro.user.*
-moc_*.cpp
-qrc_*.cpp
-Makefile
-*-build-*
+# Compiled Translations
+*/translations/*.qm
+ 
+/.settings/
+*/arm/
+*/x86/
+.metadata/*
+/.metadata/
+192.*
+169.254.0.1
